--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-
+    background-color: #b4e3ff;
     font-family: "Arial";
     /* Define a fonte padrão para o corpo do documento */
     margin: 0;
@@ -12,14 +12,63 @@ body {
 
 /* Estilo do cabeçalho */
 header {
-    background-color: rgb(20, 20, 54);
+    background-color: #041d2c;
     display: flex;
     /* Define a cor de fundo do cabeçalho */
 }
 
+.form-container {
+    max-width: 400px;
+    margin: 0 auto;
+    color: #041d2c;
+    font-weight: bold;
+}
+
+.form-container label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-container select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.form-container input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.form-container input[type="number"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.form-container input[type="button"] {
+    background-color: #041d2c;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.form-container input[type="button"]:hover {
+    background-color: darkred;
+}
+
+
 .titulo {
-    font-size: 30px;
-    padding-left: 140px;
+    text-align: center;
+    font-size: 60px;
+    color: #041d2c;
 }
 
 hr {
@@ -27,7 +76,7 @@ hr {
     /* Define a largura da linha para 50% da largura do contêiner */
     height: 5px;
     /* Define a altura da linha */
-    background-color: rgb(194, 151, 32);
+    background-color:  #041d2c;
     /* Cor da linha */
     border: none;
     /* Remove a borda padrão */
@@ -35,26 +84,27 @@ hr {
 }
 
 table {
-    /* background-color: rgb(194, 151, 32); */
+    /* background-color: #5a9f95; */
     width: 85%;
     /* Define a largura da tabela */
     margin: 20px auto;
     /* Centraliza a tabela horizontalmente */
     margin-bottom: 800px;
-    border: 1px solid rgb(194, 151, 32);
+    border: 1px solid  #041d2c;
     border-spacing: 0;
 }
 th {
-    background-color: rgb(194, 151, 32);
+    background-color:  #041d2c;
     /* Cor de fundo para células do cabeçalho */
-    border: 1px solid rgb(194, 151, 32);
+    border: 1px solid  #041d2c;
+    color: white;
 }
 td {
     text-align: center;
     /* Centraliza o conteúdo das células */
     padding: 7px;
-    color: rgb(20, 20, 54);
-    border: 1px solid rgb(194, 151, 32);
+    color: #041d2c;
+    border: 1px solid  #041d2c;
 }
 
 .logintitle {
@@ -73,7 +123,7 @@ td {
 
 #logoutButton {
     margin: 0 0 5px 40px;
-    background-color: rgb(20, 20, 54); /* Cor de fundo */
+    background-color: #041d2c; /* Cor de fundo */
     color: white; /* Cor do texto */
     padding: 10px 20px; /* Espaçamento interno */
     border: none; /* Remove a borda */
@@ -106,7 +156,7 @@ td {
 }
 
 .login {
-    background-color: rgb(194, 151, 32);
+    background-color: #5a9f95;
     /* Cor de fundo para a div de login */
 
     width: 200px;
@@ -144,7 +194,7 @@ td {
 
 #loginForm input[type="submit"] {
     font-weight: bold;
-    background-color: rgb(20, 20, 54); /* Cor de fundo */
+    background-color: #041d2c; /* Cor de fundo */
     color: white; /* Cor do texto */
     margin-bottom: 5px;
     width: 100px;
@@ -218,7 +268,7 @@ td {
     left: 50%;
     transform: translateX(-50%); /* Centraliza horizontalmente */
     padding: 10px 20px;
-    background-color: rgb(20, 20, 54);
+    background-color: #041d2c;
     color: white;
     border: none;
     cursor: pointer;
@@ -278,7 +328,7 @@ nav a {
 
 /* Estilização do menu quando o mouse está em cima */
 nav a:hover {
-    color: rgb(194, 151, 32);
+    color: #5a9f95;
     /* Altera a cor do texto para preto quando o mouse passa por cima */
     text-decoration: none;
     /* Remove decoração de texto */
@@ -288,7 +338,7 @@ nav a:hover {
 
 footer {
 
-    background-color: rgb(20, 20, 54);
+    background-color: #041d2c;
     /* Define a cor de fundo do cabeçalho */
 }
 
@@ -298,13 +348,13 @@ footer {
     font-size: 12px;
     /* Define o tamanho da fonte como 12 pixels */
     margin: 0 0 0 900px;
-    background-color: rgb(20, 20, 54);
+    background-color: #041d2c;
 
-    border-bottom: 1px solid rgb(20, 20, 54);
+    border-bottom: 1px solid #041d2c;
     /* Aqui você define a cor e a espessura da borda inferior */
     padding-bottom: 50px;
     /* Adiciona algum espaçamento entre o texto e a borda */
-    border-top: 1px solid rgb(20, 20, 54);
+    border-top: 1px solid #041d2c;
     padding-top: 50px;
 
 }
@@ -320,19 +370,19 @@ footer {
 
 /* Cor da barra de rolagem */
 ::-webkit-scrollbar-track {
-    background: rgb(194, 151, 32);
+    background: #5a9f95;
     /* Cor de fundo da barra de rolagem */
 }
 
 /* Cor da alça da barra de rolagem */
 ::-webkit-scrollbar-thumb {
-    background: rgb(20, 20, 54);
+    background: #041d2c;
     /* Cor da alça da barra de rolagem */
 }
 
 /* Cor ao passar o mouse sobre a alça da barra de rolagem */
 ::-webkit-scrollbar-thumb:hover {
-    background: rgb(20, 20, 54);
+    background: #041d2c;
     /* Cor ao passar o mouse sobre a alça da barra de rolagem */
 }
 
