--- a/site_Taitai/style.css
+++ b/site_Taitai/style.css
@@ -99,6 +99,12 @@ th {
     border: 1px solid  #041d2c;
     color: white;
 }
+
+.fadeOut{
+    opacity: 0;
+    transition: 1s;
+}
+
 td {
     text-align: center;
     /* Centraliza o conteúdo das células */
